--- a/micrograd.ipynb
+++ b/micrograd.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNEYOq55OkuKUTjcQ+njzqV",
+      "authorship_tag": "ABX9TyNyWJgeCYCkhKgHCWQgt/pL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +46,7 @@
       "metadata": {
         "id": "x_Rd3sldIsT7"
       },
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -58,7 +58,7 @@
       "metadata": {
         "id": "YLm3XtCEKBVb"
       },
-      "execution_count": 4,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -71,9 +71,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BSa1shKjKcGZ",
-        "outputId": "92ab7439-dc69-4e7a-fa8b-b54cbf6ed218"
+        "outputId": "6d5bd5f7-3804-4d35-ce40-f67ca07ded36"
       },
-      "execution_count": 5,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -83,7 +83,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 3
         }
       ]
     },
@@ -100,19 +100,19 @@
           "height": 447
         },
         "id": "RibV16AHKe3T",
-        "outputId": "a13ea2e5-8b1f-453b-f95d-63193bfad9d1"
+        "outputId": "6056b004-a3b2-4f0e-ea1a-2b6d4fbe3c00"
       },
-      "execution_count": 6,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[<matplotlib.lines.Line2D at 0x7f51807c6fb0>]"
+              "[<matplotlib.lines.Line2D at 0x7f7db8114280>]"
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 4
         },
         {
           "output_type": "display_data",
@@ -147,9 +147,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5FOipFQ9K41k",
-        "outputId": "ff3167ae-df08-4dde-b116-95ada80fcf00"
+        "outputId": "1c20f450-5c05-404a-82ac-54a3e1e7303d"
       },
-      "execution_count": 9,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -159,7 +159,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 5
         }
       ]
     },
@@ -176,9 +176,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cF142CDiLNsJ",
-        "outputId": "4328db89-dbda-4d60-f761-99f30d7bfc62"
+        "outputId": "50642921-5eaf-4bc6-8d78-ed2cf7a50052"
       },
-      "execution_count": 10,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -188,7 +188,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 6
         }
       ]
     },
@@ -207,9 +207,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "k8OmezW5L3Q1",
-        "outputId": "d9fadc36-e725-44c5-c001-08c683eb0c4c"
+        "outputId": "f4775e8a-448a-4fa0-d123-9f70c66d93d9"
       },
-      "execution_count": 11,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -253,9 +253,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BtJAkDvaMVxP",
-        "outputId": "b3755d68-d281-414c-d54a-156a08105402"
+        "outputId": "edfdf307-dd2a-42a6-f68e-28bfa609ed58"
       },
-      "execution_count": 12,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -301,9 +301,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MEkPxeE6OJou",
-        "outputId": "1fe7efc7-7ba6-4d90-d234-2677992a21e7"
+        "outputId": "795229c7-91d8-4758-acee-b665ec886cb9"
       },
-      "execution_count": 13,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -340,9 +340,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9u7f39tjNyDo",
-        "outputId": "b7adc776-47aa-458c-ca4c-2d66ef74a5d3"
+        "outputId": "e7b059e4-bcab-4803-8d66-637d536ac2f9"
       },
-      "execution_count": 14,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -354,23 +354,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "- class Value : This line declares the start of the class definition\n",
-        "- __init__ is the constructor method. It is called when an object of the Value class is created. \n",
-        "- __repr__ is the representation method. It is used to convert an object to a string. The __repr__ method in this code returns a string that represents the Value object in the following format: Value(data = <data>), where <data> is the data that is stored in the object.\n",
-        "- __repr__ method, is a special method that is used to convert an object to a string.\n",
-        "- The __repr__ method is a powerful tool that can be used to debug your code and to make your code more readable. \n",
-        "\n",
-        "- __add__ is the addition method. It is called when two Value objects are added together. The __add__ method in this code creates a new Value object that contains the sum of the data in the two objects that are being added together.\n",
-        "\n",
-        "- __mul__ is the multiplication method. It is called when two Value objects are multiplied together. The __mul__ method in this code creates a new Value object that contains the product of the data in the two objects that are being multiplied together."
-      ],
-      "metadata": {
-        "id": "vCo5GalBSNQ8"
-      }
     },
     {
       "cell_type": "code",
@@ -403,9 +386,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ejiARnEbOyAr",
-        "outputId": "7854ff69-7881-4509-b5c1-56db9159721a"
+        "outputId": "eaaf3097-fc1f-4f53-9ff6-e0dc399cc1d1"
       },
-      "execution_count": 17,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -415,7 +398,268 @@
             ]
           },
           "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "1. The __init__ method initializes a Value object with the provided data value and an optional _children and _op argument \n",
+        "  - _children is a set of previous Value objects that contributed to the current value\n",
+        "  - l _op parameter, which represents the operation performed to obtain the current value. The _op attribute is then set accordingly.\n",
+        "2. The __add__ method overloads the + operator.\n",
+        "\n",
+        "  - defines the addition operation between two Value objects.\n",
+        "  -\n",
+        "\n",
+        "3. The __mul__ method overloads the * operator \n",
+        "  - defines the  multiplication operation between two Value objects."
+      ],
+      "metadata": {
+        "id": "73kcrjn8hmaX"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        " - class : In oops a class is a blueprint for creating objects (instances) that sare common properties(attributes) and behavior (method).\n",
+        "\n",
+        "- __init__ is a special method known as constructor.\n",
+        "\n",
+        "- constructor used to initialize objects attributes.\n",
+        "\n",
+        "\n",
+        "- __init__ is dunder method .\n",
+        "\n",
+        "- dunder method is a method that allows instances of a class to interact with builtin function and operators of language.\n",
+        "- dunder comes from double underscore.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "RdUxCG6qkIW-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Value:\n",
+        "  \n",
+        "  def __init__(self, data,_children=(),_op=''):\n",
+        "    self.data = data\n",
+        "    self._prev = set(_children)\n",
+        "    self._op = _op \n",
+        "  \n",
+        "  def __repr__(self):\n",
+        "    return f\"Value(data = {self.data})\"\n",
+        "\n",
+        "  def __add__(self, other):\n",
+        "    out = Value(self.data + other.data ,(self,other),'+')\n",
+        "    return out\n",
+        "    \n",
+        "  def __mul__(self, other):\n",
+        "    out = Value(self.data * other.data ,(self,other),'*')\n",
+        "    return out\n",
+        "\n",
+        "\n",
+        "a = Value(2.0)\n",
+        "b = Value(-3.0)\n",
+        "c = Value(10.0)\n",
+        "d= a*b +c\n",
+        "d"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jmK-wkyIQmul",
+        "outputId": "a14d7372-5f95-4909-86f1-52bffbcf9d43"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Value(data = 4.0)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "d.v"
+      ],
+      "metadata": {
+        "id": "5QCPPbcTQUae",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9d0a02c6-fb0d-4e7f-a757-cc48cf749a99"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{Value(data = -6.0), Value(data = 10.0)}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "d._prev"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-qxd36_tiGVC",
+        "outputId": "e2a09d6d-0434-458f-c24b-310f02991a44"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{Value(data = -6.0), Value(data = 10.0)}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "d._op"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "uJGlV8gDiHpF",
+        "outputId": "6d017b55-92f8-4530-8c61-8a6713e6c8e5"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'+'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
           "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "! pip install graphviz\n",
+        "from graphviz import Digraph"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dR3HgupFwNcu",
+        "outputId": "f4045bdd-9396-4c98-c67c-872a3d2c57d6"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
+            "Requirement already satisfied: graphviz in /usr/local/lib/python3.10/dist-packages (0.20.1)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def trace(root):\n",
+        "  nodes, edges = set(), set()\n",
+        "  def build(v):\n",
+        "      if v not in nodes:\n",
+        "          nodes.add(v)\n",
+        "          for child in v._prev:\n",
+        "              edges.add((child, v))\n",
+        "              build(child)\n",
+        "  build(root)\n",
+        "  return nodes, edges\n",
+        "\n",
+        "def draw_dot(root):\n",
+        "    dot = Digraph(format='svg', graph_attr = {'rankdir': 'LR'})\n",
+        "\n",
+        "    nodes, edges = trace(root)\n",
+        "    for n in nodes:\n",
+        "        uid = str(id(n))\n",
+        "        dot.node(name=uid , label = \"{data %.4f }\" % (n.data, ), shape='record')\n",
+        "        if n._op:\n",
+        "              dot.node(name = uid + n._op ,label=n._op)\n",
+        "              dot.edge(uid + n._op, uid)\n",
+        "\n",
+        "  \n",
+        "            \n",
+        "    for n1, n2 in edges:\n",
+        "            dot.edge(str(id(n1)), str(id(n2)) + n2._op)\n",
+        "    \n",
+        "    return dot"
+      ],
+      "metadata": {
+        "id": "IUthq5PkiIzM"
+      },
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "draw_dot(d)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 191
+        },
+        "id": "E36kZePwwErx",
+        "outputId": "ffd18ba5-c43b-4ffe-e9f6-3d5adddaf434"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "image/svg+xml": "<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"no\"?>\n<!DOCTYPE svg PUBLIC \"-//W3C//DTD SVG 1.1//EN\"\n \"http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd\">\n<!-- Generated by graphviz version 2.43.0 (0)\n -->\n<!-- Title: %3 Pages: 1 -->\n<svg width=\"512pt\" height=\"127pt\"\n viewBox=\"0.00 0.00 512.00 127.00\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">\n<g id=\"graph0\" class=\"graph\" transform=\"scale(1 1) rotate(0) translate(4 123)\">\n<title>%3</title>\n<polygon fill=\"white\" stroke=\"transparent\" points=\"-4,4 -4,-123 508,-123 508,4 -4,4\"/>\n<!-- 140177562414736 -->\n<g id=\"node1\" class=\"node\">\n<title>140177562414736</title>\n<polygon fill=\"none\" stroke=\"black\" points=\"424,-54.5 424,-90.5 504,-90.5 504,-54.5 424,-54.5\"/>\n<text text-anchor=\"middle\" x=\"464\" y=\"-68.8\" font-family=\"Times,serif\" font-size=\"14.00\">data 4.0000</text>\n</g>\n<!-- 140177562414736+ -->\n<g id=\"node2\" class=\"node\">\n<title>140177562414736+</title>\n<ellipse fill=\"none\" stroke=\"black\" cx=\"361\" cy=\"-72.5\" rx=\"27\" ry=\"18\"/>\n<text text-anchor=\"middle\" x=\"361\" y=\"-68.8\" font-family=\"Times,serif\" font-size=\"14.00\">+</text>\n</g>\n<!-- 140177562414736+&#45;&gt;140177562414736 -->\n<g id=\"edge1\" class=\"edge\">\n<title>140177562414736+&#45;&gt;140177562414736</title>\n<path fill=\"none\" stroke=\"black\" d=\"M388.01,-72.5C395.82,-72.5 404.67,-72.5 413.48,-72.5\"/>\n<polygon fill=\"black\" stroke=\"black\" points=\"413.73,-76 423.73,-72.5 413.73,-69 413.73,-76\"/>\n</g>\n<!-- 140177562407104 -->\n<g id=\"node3\" class=\"node\">\n<title>140177562407104</title>\n<polygon fill=\"none\" stroke=\"black\" points=\"0,-55.5 0,-91.5 85,-91.5 85,-55.5 0,-55.5\"/>\n<text text-anchor=\"middle\" x=\"42.5\" y=\"-69.8\" font-family=\"Times,serif\" font-size=\"14.00\">data &#45;3.0000</text>\n</g>\n<!-- 140177562411856* -->\n<g id=\"node6\" class=\"node\">\n<title>140177562411856*</title>\n<ellipse fill=\"none\" stroke=\"black\" cx=\"148\" cy=\"-45.5\" rx=\"27\" ry=\"18\"/>\n<text text-anchor=\"middle\" x=\"148\" y=\"-41.8\" font-family=\"Times,serif\" font-size=\"14.00\">*</text>\n</g>\n<!-- 140177562407104&#45;&gt;140177562411856* -->\n<g id=\"edge6\" class=\"edge\">\n<title>140177562407104&#45;&gt;140177562411856*</title>\n<path fill=\"none\" stroke=\"black\" d=\"M85,-62.27C94.32,-59.75 104.1,-57.11 113.06,-54.68\"/>\n<polygon fill=\"black\" stroke=\"black\" points=\"114.03,-58.04 122.77,-52.05 112.2,-51.29 114.03,-58.04\"/>\n</g>\n<!-- 140177562404656 -->\n<g id=\"node4\" class=\"node\">\n<title>140177562404656</title>\n<polygon fill=\"none\" stroke=\"black\" points=\"211,-82.5 211,-118.5 298,-118.5 298,-82.5 211,-82.5\"/>\n<text text-anchor=\"middle\" x=\"254.5\" y=\"-96.8\" font-family=\"Times,serif\" font-size=\"14.00\">data 10.0000</text>\n</g>\n<!-- 140177562404656&#45;&gt;140177562414736+ -->\n<g id=\"edge4\" class=\"edge\">\n<title>140177562404656&#45;&gt;140177562414736+</title>\n<path fill=\"none\" stroke=\"black\" d=\"M298,-89.11C307.18,-86.65 316.78,-84.08 325.6,-81.72\"/>\n<polygon fill=\"black\" stroke=\"black\" points=\"326.78,-85.02 335.53,-79.06 324.97,-78.26 326.78,-85.02\"/>\n</g>\n<!-- 140177562411856 -->\n<g id=\"node5\" class=\"node\">\n<title>140177562411856</title>\n<polygon fill=\"none\" stroke=\"black\" points=\"212,-27.5 212,-63.5 297,-63.5 297,-27.5 212,-27.5\"/>\n<text text-anchor=\"middle\" x=\"254.5\" y=\"-41.8\" font-family=\"Times,serif\" font-size=\"14.00\">data &#45;6.0000</text>\n</g>\n<!-- 140177562411856&#45;&gt;140177562414736+ -->\n<g id=\"edge3\" class=\"edge\">\n<title>140177562411856&#45;&gt;140177562414736+</title>\n<path fill=\"none\" stroke=\"black\" d=\"M297.1,-56.25C306.61,-58.71 316.62,-61.29 325.78,-63.66\"/>\n<polygon fill=\"black\" stroke=\"black\" points=\"325.13,-67.11 335.69,-66.22 326.88,-60.33 325.13,-67.11\"/>\n</g>\n<!-- 140177562411856*&#45;&gt;140177562411856 -->\n<g id=\"edge2\" class=\"edge\">\n<title>140177562411856*&#45;&gt;140177562411856</title>\n<path fill=\"none\" stroke=\"black\" d=\"M175.1,-45.5C183.27,-45.5 192.59,-45.5 201.88,-45.5\"/>\n<polygon fill=\"black\" stroke=\"black\" points=\"201.89,-49 211.89,-45.5 201.89,-42 201.89,-49\"/>\n</g>\n<!-- 140177562404320 -->\n<g id=\"node7\" class=\"node\">\n<title>140177562404320</title>\n<polygon fill=\"none\" stroke=\"black\" points=\"2.5,-0.5 2.5,-36.5 82.5,-36.5 82.5,-0.5 2.5,-0.5\"/>\n<text text-anchor=\"middle\" x=\"42.5\" y=\"-14.8\" font-family=\"Times,serif\" font-size=\"14.00\">data 2.0000</text>\n</g>\n<!-- 140177562404320&#45;&gt;140177562411856* -->\n<g id=\"edge5\" class=\"edge\">\n<title>140177562404320&#45;&gt;140177562411856*</title>\n<path fill=\"none\" stroke=\"black\" d=\"M82.63,-28.71C92.47,-31.27 102.95,-34.01 112.54,-36.51\"/>\n<polygon fill=\"black\" stroke=\"black\" points=\"111.96,-39.98 122.52,-39.11 113.73,-33.2 111.96,-39.98\"/>\n</g>\n</g>\n</svg>\n",
+            "text/plain": [
+              "<graphviz.graphs.Digraph at 0x7f7d8616f820>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
         }
       ]
     },
@@ -423,7 +667,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "5QCPPbcTQUae"
+        "id": "MuPblHMqwZ4I"
       },
       "execution_count": null,
       "outputs": []
