--- a/micrograd.ipynb
+++ b/micrograd.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM68kBPQQz23NmJZLQingjZ",
+      "authorship_tag": "ABX9TyONXtRY3tJAEAfLq/stKP9g",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -899,10 +899,279 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### IMPORTANT  \n",
+        "- chain rule \n",
+        "- https://en.wikipedia.org/wiki/Chain_rule"
+      ],
+      "metadata": {
+        "id": "qDFWjlbST-Ht"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def back_prop():\n",
+        "\n",
+        "  h = 0.0001\n",
+        "\n",
+        "  a = Value(2.0 , label='a')\n",
+        "  b = Value(-3.0, label='b')\n",
+        "  c = Value(10.0 , label = 'c')\n",
+        "  e = a*b ; e.label = 'e'\n",
+        "  d= e +c ; d.label = 'd'\n",
+        "  f = Value(-2.0, label = 'f')\n",
+        "  L = d * f; L.label = 'L'\n",
+        "  L1 = L.data\n",
+        "\n",
+        "  a = Value(2.0 , label='a')\n",
+        "  b = Value(-3.0, label='b')\n",
+        "  c = Value(10.0 , label = 'c')\n",
+        "  c.data += h\n",
+        "  e = a*b ; e.label = 'e'\n",
+        "  d= e +c ; d.label = 'd'\n",
+        "  f = Value(-2.0, label = 'f')\n",
+        "  L = d * f; L.label = 'L'\n",
+        "  L2 = L.data\n",
+        "\n",
+        "  \n",
+        "  print (((L2 ) - L1)/h)\n",
+        "  \n",
+        "back_prop()\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mzbJbdQwXvuc",
+        "outputId": "70af61ca-46c0-45d5-fde0-4ce299f74635"
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "-1.9999999999953388\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def back_prop():\n",
+        "\n",
+        "  h = 0.0001\n",
+        "\n",
+        "  a = Value(2.0 , label='a')\n",
+        "  b = Value(-3.0, label='b')\n",
+        "  c = Value(10.0 , label = 'c')\n",
+        "  e = a*b ; e.label = 'e'\n",
+        "  d= e +c ; d.label = 'd'\n",
+        "  f = Value(-2.0, label = 'f')\n",
+        "  L = d * f; L.label = 'L'\n",
+        "  L1 = L.data\n",
+        "\n",
+        "  a = Value(2.0 , label='a')\n",
+        "  b = Value(-3.0, label='b')\n",
+        "  c = Value(10.0 , label = 'c')\n",
+        "  e = a*b ; e.label = 'e'\n",
+        "  e.data += h \n",
+        "  d= e +c ; d.label = 'd'\n",
+        "  f = Value(-2.0, label = 'f')\n",
+        "  L = d * f; L.label = 'L'\n",
+        "  L2 = L.data\n",
+        "\n",
+        "  \n",
+        "  print (((L2 ) - L1)/h)\n",
+        "  \n",
+        "back_prop()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Easf5dSKaWoJ",
+        "outputId": "1a65adc9-8e2c-4b2f-f464-0f03b5979c21"
+      },
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "-1.9999999999953388\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "e.grad = -2.0\n",
+        "c.grad = -2.0"
+      ],
+      "metadata": {
+        "id": "9XevuW8-ar69"
+      },
+      "execution_count": 50,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def back_prop():\n",
+        "\n",
+        "  h = 0.0001\n",
+        "\n",
+        "  a = Value(2.0 , label='a')\n",
+        "  b = Value(-3.0, label='b')\n",
+        "  c = Value(10.0 , label = 'c')\n",
+        "  e = a*b ; e.label = 'e'\n",
+        "  d= e +c ; d.label = 'd'\n",
+        "  f = Value(-2.0, label = 'f')\n",
+        "  L = d * f; L.label = 'L'\n",
+        "  L1 = L.data\n",
+        "\n",
+        "  a = Value(2.0 , label='a')\n",
+        "  a.data += h\n",
+        "  b = Value(-3.0, label='b')\n",
+        "  c = Value(10.0 , label = 'c')\n",
+        "  e = a*b ; e.label = 'e'\n",
+        "  d= e +c ; d.label = 'd'\n",
+        "  f = Value(-2.0, label = 'f')\n",
+        "  L = d * f; L.label = 'L'\n",
+        "  L2 = L.data\n",
+        "\n",
+        "  \n",
+        "  print (((L2 ) - L1)/h)\n",
+        "  \n",
+        "back_prop()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "x948RypId8kZ",
+        "outputId": "afe6fd09-9321-4de0-a167-70cbbbf9a6a5"
+      },
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "6.000000000021544\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def back_prop():\n",
+        "\n",
+        "  h = 0.0001\n",
+        "\n",
+        "  a = Value(2.0 , label='a')\n",
+        "  b = Value(-3.0, label='b')\n",
+        "  c = Value(10.0 , label = 'c')\n",
+        "  e = a*b ; e.label = 'e'\n",
+        "  d= e +c ; d.label = 'd'\n",
+        "  f = Value(-2.0, label = 'f')\n",
+        "  L = d * f; L.label = 'L'\n",
+        "  L1 = L.data\n",
+        "\n",
+        "  a = Value(2.0 , label='a')\n",
+        "  b = Value(-3.0, label='b')\n",
+        "  b.data += h \n",
+        "  c = Value(10.0 , label = 'c')\n",
+        "  e = a*b ; e.label = 'e'\n",
+        "  d= e +c ; d.label = 'd'\n",
+        "  f = Value(-2.0, label = 'f')\n",
+        "  L = d * f; L.label = 'L'\n",
+        "  L2 = L.data\n",
+        "\n",
+        "  \n",
+        "  print (((L2 ) - L1)/h)\n",
+        "  \n",
+        "back_prop()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nHtpriQteqTZ",
+        "outputId": "3f8aa0fe-d84d-4e93-8f66-c099361d4ca1"
+      },
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "-4.000000000008441\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a.grad = 6\n",
+        "b.grad = -4"
+      ],
+      "metadata": {
+        "id": "DCrrP-s-eWew"
+      },
+      "execution_count": 54,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "draw_dot(L)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 249
+        },
+        "id": "e5W-kuTOcbUF",
+        "outputId": "4b676361-625e-45b3-e0bf-191034c6d111"
+      },
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "image/svg+xml": "<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"no\"?>\n<!DOCTYPE svg PUBLIC \"-//W3C//DTD SVG 1.1//EN\"\n \"http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd\">\n<!-- Generated by graphviz version 2.43.0 (0)\n -->\n<!-- Title: %3 Pages: 1 -->\n<svg width=\"1157pt\" height=\"156pt\"\n viewBox=\"0.00 0.00 1157.00 156.00\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">\n<g id=\"graph0\" class=\"graph\" transform=\"scale(1 1) rotate(0) translate(4 152)\">\n<title>%3</title>\n<polygon fill=\"white\" stroke=\"transparent\" points=\"-4,4 -4,-152 1153,-152 1153,4 -4,4\"/>\n<!-- 140179949794832 -->\n<g id=\"node1\" class=\"node\">\n<title>140179949794832</title>\n<polygon fill=\"none\" stroke=\"black\" points=\"957,-27.5 957,-63.5 1149,-63.5 1149,-27.5 957,-27.5\"/>\n<text text-anchor=\"middle\" x=\"969.5\" y=\"-41.8\" font-family=\"Times,serif\" font-size=\"14.00\">L</text>\n<polyline fill=\"none\" stroke=\"black\" points=\"982,-27.5 982,-63.5 \"/>\n<text text-anchor=\"middle\" x=\"1024.5\" y=\"-41.8\" font-family=\"Times,serif\" font-size=\"14.00\">data &#45;8.0000</text>\n<polyline fill=\"none\" stroke=\"black\" points=\"1067,-27.5 1067,-63.5 \"/>\n<text text-anchor=\"middle\" x=\"1108\" y=\"-41.8\" font-family=\"Times,serif\" font-size=\"14.00\">grad 1.0000</text>\n</g>\n<!-- 140179949794832* -->\n<g id=\"node2\" class=\"node\">\n<title>140179949794832*</title>\n<ellipse fill=\"none\" stroke=\"black\" cx=\"894\" cy=\"-45.5\" rx=\"27\" ry=\"18\"/>\n<text text-anchor=\"middle\" x=\"894\" y=\"-41.8\" font-family=\"Times,serif\" font-size=\"14.00\">*</text>\n</g>\n<!-- 140179949794832*&#45;&gt;140179949794832 -->\n<g id=\"edge1\" class=\"edge\">\n<title>140179949794832*&#45;&gt;140179949794832</title>\n<path fill=\"none\" stroke=\"black\" d=\"M921.28,-45.5C928.78,-45.5 937.44,-45.5 946.67,-45.5\"/>\n<polygon fill=\"black\" stroke=\"black\" points=\"946.87,-49 956.87,-45.5 946.87,-42 946.87,-49\"/>\n</g>\n<!-- 140179949796368 -->\n<g id=\"node3\" class=\"node\">\n<title>140179949796368</title>\n<polygon fill=\"none\" stroke=\"black\" points=\"4.5,-111.5 4.5,-147.5 189.5,-147.5 189.5,-111.5 4.5,-111.5\"/>\n<text text-anchor=\"middle\" x=\"16\" y=\"-125.8\" font-family=\"Times,serif\" font-size=\"14.00\">a</text>\n<polyline fill=\"none\" stroke=\"black\" points=\"27.5,-111.5 27.5,-147.5 \"/>\n<text text-anchor=\"middle\" x=\"67.5\" y=\"-125.8\" font-family=\"Times,serif\" font-size=\"14.00\">data 2.0000</text>\n<polyline fill=\"none\" stroke=\"black\" points=\"107.5,-111.5 107.5,-147.5 \"/>\n<text text-anchor=\"middle\" x=\"148.5\" y=\"-125.8\" font-family=\"Times,serif\" font-size=\"14.00\">grad 6.0000</text>\n</g>\n<!-- 140179949797088* -->\n<g id=\"node7\" class=\"node\">\n<title>140179949797088*</title>\n<ellipse fill=\"none\" stroke=\"black\" cx=\"257\" cy=\"-101.5\" rx=\"27\" ry=\"18\"/>\n<text text-anchor=\"middle\" x=\"257\" y=\"-97.8\" font-family=\"Times,serif\" font-size=\"14.00\">*</text>\n</g>\n<!-- 140179949796368&#45;&gt;140179949797088* -->\n<g id=\"edge9\" class=\"edge\">\n<title>140179949796368&#45;&gt;140179949797088*</title>\n<path fill=\"none\" stroke=\"black\" d=\"M189.91,-113.21C200.76,-111.29 211.28,-109.43 220.61,-107.77\"/>\n<polygon fill=\"black\" stroke=\"black\" points=\"221.37,-111.19 230.6,-106 220.15,-104.3 221.37,-111.19\"/>\n</g>\n<!-- 140179949794976 -->\n<g id=\"node4\" class=\"node\">\n<title>140179949794976</title>\n<polygon fill=\"none\" stroke=\"black\" points=\"642,-55.5 642,-91.5 831,-91.5 831,-55.5 642,-55.5\"/>\n<text text-anchor=\"middle\" x=\"653.5\" y=\"-69.8\" font-family=\"Times,serif\" font-size=\"14.00\">d</text>\n<polyline fill=\"none\" stroke=\"black\" points=\"665,-55.5 665,-91.5 \"/>\n<text text-anchor=\"middle\" x=\"705\" y=\"-69.8\" font-family=\"Times,serif\" font-size=\"14.00\">data 4.0000</text>\n<polyline fill=\"none\" stroke=\"black\" points=\"745,-55.5 745,-91.5 \"/>\n<text text-anchor=\"middle\" x=\"788\" y=\"-69.8\" font-family=\"Times,serif\" font-size=\"14.00\">grad &#45;2.0000</text>\n</g>\n<!-- 140179949794976&#45;&gt;140179949794832* -->\n<g id=\"edge8\" class=\"edge\">\n<title>140179949794976&#45;&gt;140179949794832*</title>\n<path fill=\"none\" stroke=\"black\" d=\"M831.1,-56.65C840.4,-54.97 849.38,-53.35 857.49,-51.89\"/>\n<polygon fill=\"black\" stroke=\"black\" points=\"858.37,-55.29 867.59,-50.07 857.13,-48.4 858.37,-55.29\"/>\n</g>\n<!-- 140179949794976+ -->\n<g id=\"node5\" class=\"node\">\n<title>140179949794976+</title>\n<ellipse fill=\"none\" stroke=\"black\" cx=\"579\" cy=\"-73.5\" rx=\"27\" ry=\"18\"/>\n<text text-anchor=\"middle\" x=\"579\" y=\"-69.8\" font-family=\"Times,serif\" font-size=\"14.00\">+</text>\n</g>\n<!-- 140179949794976+&#45;&gt;140179949794976 -->\n<g id=\"edge2\" class=\"edge\">\n<title>140179949794976+&#45;&gt;140179949794976</title>\n<path fill=\"none\" stroke=\"black\" d=\"M606.03,-73.5C613.66,-73.5 622.52,-73.5 631.94,-73.5\"/>\n<polygon fill=\"black\" stroke=\"black\" points=\"631.94,-77 641.94,-73.5 631.94,-70 631.94,-77\"/>\n</g>\n<!-- 140179949797088 -->\n<g id=\"node6\" class=\"node\">\n<title>140179949797088</title>\n<polygon fill=\"none\" stroke=\"black\" points=\"321,-83.5 321,-119.5 515,-119.5 515,-83.5 321,-83.5\"/>\n<text text-anchor=\"middle\" x=\"332.5\" y=\"-97.8\" font-family=\"Times,serif\" font-size=\"14.00\">e</text>\n<polyline fill=\"none\" stroke=\"black\" points=\"344,-83.5 344,-119.5 \"/>\n<text text-anchor=\"middle\" x=\"386.5\" y=\"-97.8\" font-family=\"Times,serif\" font-size=\"14.00\">data &#45;6.0000</text>\n<polyline fill=\"none\" stroke=\"black\" points=\"429,-83.5 429,-119.5 \"/>\n<text text-anchor=\"middle\" x=\"472\" y=\"-97.8\" font-family=\"Times,serif\" font-size=\"14.00\">grad &#45;2.0000</text>\n</g>\n<!-- 140179949797088&#45;&gt;140179949794976+ -->\n<g id=\"edge5\" class=\"edge\">\n<title>140179949797088&#45;&gt;140179949794976+</title>\n<path fill=\"none\" stroke=\"black\" d=\"M515.16,-84.57C524.82,-82.87 534.13,-81.23 542.49,-79.75\"/>\n<polygon fill=\"black\" stroke=\"black\" points=\"543.3,-83.17 552.54,-77.98 542.08,-76.27 543.3,-83.17\"/>\n</g>\n<!-- 140179949797088*&#45;&gt;140179949797088 -->\n<g id=\"edge3\" class=\"edge\">\n<title>140179949797088*&#45;&gt;140179949797088</title>\n<path fill=\"none\" stroke=\"black\" d=\"M284.26,-101.5C292.05,-101.5 301.1,-101.5 310.75,-101.5\"/>\n<polygon fill=\"black\" stroke=\"black\" points=\"310.99,-105 320.99,-101.5 310.99,-98 310.99,-105\"/>\n</g>\n<!-- 140179949797136 -->\n<g id=\"node8\" class=\"node\">\n<title>140179949797136</title>\n<polygon fill=\"none\" stroke=\"black\" points=\"0,-56.5 0,-92.5 194,-92.5 194,-56.5 0,-56.5\"/>\n<text text-anchor=\"middle\" x=\"11.5\" y=\"-70.8\" font-family=\"Times,serif\" font-size=\"14.00\">b</text>\n<polyline fill=\"none\" stroke=\"black\" points=\"23,-56.5 23,-92.5 \"/>\n<text text-anchor=\"middle\" x=\"65.5\" y=\"-70.8\" font-family=\"Times,serif\" font-size=\"14.00\">data &#45;3.0000</text>\n<polyline fill=\"none\" stroke=\"black\" points=\"108,-56.5 108,-92.5 \"/>\n<text text-anchor=\"middle\" x=\"151\" y=\"-70.8\" font-family=\"Times,serif\" font-size=\"14.00\">grad &#45;4.0000</text>\n</g>\n<!-- 140179949797136&#45;&gt;140179949797088* -->\n<g id=\"edge7\" class=\"edge\">\n<title>140179949797136&#45;&gt;140179949797088*</title>\n<path fill=\"none\" stroke=\"black\" d=\"M194.01,-90.91C203.35,-92.5 212.37,-94.04 220.49,-95.43\"/>\n<polygon fill=\"black\" stroke=\"black\" points=\"220.16,-98.93 230.6,-97.16 221.34,-92.03 220.16,-98.93\"/>\n</g>\n<!-- 140179949795264 -->\n<g id=\"node9\" class=\"node\">\n<title>140179949795264</title>\n<polygon fill=\"none\" stroke=\"black\" points=\"642.5,-0.5 642.5,-36.5 830.5,-36.5 830.5,-0.5 642.5,-0.5\"/>\n<text text-anchor=\"middle\" x=\"653\" y=\"-14.8\" font-family=\"Times,serif\" font-size=\"14.00\">f</text>\n<polyline fill=\"none\" stroke=\"black\" points=\"663.5,-0.5 663.5,-36.5 \"/>\n<text text-anchor=\"middle\" x=\"706\" y=\"-14.8\" font-family=\"Times,serif\" font-size=\"14.00\">data &#45;2.0000</text>\n<polyline fill=\"none\" stroke=\"black\" points=\"748.5,-0.5 748.5,-36.5 \"/>\n<text text-anchor=\"middle\" x=\"789.5\" y=\"-14.8\" font-family=\"Times,serif\" font-size=\"14.00\">grad 4.0000</text>\n</g>\n<!-- 140179949795264&#45;&gt;140179949794832* -->\n<g id=\"edge4\" class=\"edge\">\n<title>140179949795264&#45;&gt;140179949794832*</title>\n<path fill=\"none\" stroke=\"black\" d=\"M830.65,-34.67C840.2,-36.33 849.43,-37.93 857.72,-39.37\"/>\n<polygon fill=\"black\" stroke=\"black\" points=\"857.24,-42.84 867.69,-41.11 858.44,-35.95 857.24,-42.84\"/>\n</g>\n<!-- 140179949796320 -->\n<g id=\"node10\" class=\"node\">\n<title>140179949796320</title>\n<polygon fill=\"none\" stroke=\"black\" points=\"320,-28.5 320,-64.5 516,-64.5 516,-28.5 320,-28.5\"/>\n<text text-anchor=\"middle\" x=\"331.5\" y=\"-42.8\" font-family=\"Times,serif\" font-size=\"14.00\">c</text>\n<polyline fill=\"none\" stroke=\"black\" points=\"343,-28.5 343,-64.5 \"/>\n<text text-anchor=\"middle\" x=\"386.5\" y=\"-42.8\" font-family=\"Times,serif\" font-size=\"14.00\">data 10.0000</text>\n<polyline fill=\"none\" stroke=\"black\" points=\"430,-28.5 430,-64.5 \"/>\n<text text-anchor=\"middle\" x=\"473\" y=\"-42.8\" font-family=\"Times,serif\" font-size=\"14.00\">grad &#45;2.0000</text>\n</g>\n<!-- 140179949796320&#45;&gt;140179949794976+ -->\n<g id=\"edge6\" class=\"edge\">\n<title>140179949796320&#45;&gt;140179949794976+</title>\n<path fill=\"none\" stroke=\"black\" d=\"M516.07,-62.98C525.42,-64.57 534.43,-66.1 542.55,-67.48\"/>\n<polygon fill=\"black\" stroke=\"black\" points=\"542.21,-70.97 552.65,-69.2 543.38,-64.07 542.21,-70.97\"/>\n</g>\n</g>\n</svg>\n",
+            "text/plain": [
+              "<graphviz.graphs.Digraph at 0x7f7deffbece0>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 55
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Backward propogation through neuron "
+      ],
+      "metadata": {
+        "id": "ix0eJJaLcfuK"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "qDFWjlbST-Ht"
+        "id": "gnt-SxG1f3so"
       },
       "execution_count": null,
       "outputs": []
